--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ classifiers = [
 ]
 dependencies = [
   "nilearn",
-  "pybids=>0.15.0;<0.16.0",
-  "templateflow<23.0.0",
+  "pybids >=0.15.0, <0.16.0",
+  "templateflow < 23.0.0",
 ]
 dynamic = ["version"]
 
