--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,13 @@ jobs:
     - name: Install test extras
       run: pip install giga_auto_qc[test]
     - name: Run tests
-      run: pytest --doctest-modules -v --pyargs giga_auto_qc
+      run: pytest --cov giga_auto_qc --cov-report xml --doctest-modules -v --pyargs giga_auto_qc
+    - name: codecov-umbrella
+      uses: codecov/codecov-action@v3
+      with:
+        flags: unittests # optional
+        fail_ci_if_error: true # optional (default = false)
+        verbose: true # optional (default = false)
 
   publish:
     runs-on: ubuntu-latest
