--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,14 +84,35 @@ jobs:
     - name: Install archive
       if: matrix.package == 'archive'
       run: pip install archive/archive.tgz
-    - name: Install test extras
-      run: pip install giga_auto_qc[test]
-    - name: Run tests
-      run: pytest --doctest-modules -v --pyargs giga_auto_qc
+    # - name: Install test extras
+    #   run: pip install giga_auto_qc[test]
+    # - name: Run tests
+    #   run: pytest --doctest-modules -v --pyargs giga_auto_qc
+
+  test-coverage:
+    runs-on: ubuntu-latest
+    needs: [build]
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+    steps:
+    - uses: actions/checkout@v2
+      name: Set up Python ${{ matrix.python-version }}
+    - uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install build dependencies
+      run: python -m pip install --upgrade pip
+    - name: Install task package
+      run: pip install .[test]
+    - name: Test with pytest
+      run: pytest --cov=giga_auto_qc --cov-report=xml --doctest-modules -v --pyargs giga_auto_qc
+    - uses: codecov/codecov-action@v3
+      if: ${{ always() }}
 
   publish:
     runs-on: ubuntu-latest
-    needs: [test-package]
+    needs: [test-package, test-coverage]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/download-artifact@v3
