--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,7 +100,7 @@ jobs:
     - name: Install build dependencies
       run: python -m pip install --upgrade pip
     - name: Install task package
-      run: pip install .[test]
+      run: pip install -e .[test]
     - name: Test with pytest
       run: pytest --cov=giga_auto_qc --cov-report=xml --doctest-modules -v --pyargs giga_auto_qc
     - uses: codecov/codecov-action@v3
