--- a/codecov.yml
+++ b/codecov.yml
@@ -14,6 +14,12 @@
 #         # noisy red coverage status on github PRs.
 #         target: auto
 #         threshold: 1%
+comment:                  # this is a top-level key
+  layout: reach, diff, flags, files
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: no        # [yes :: must have a base report to post]
+  require_head: yes       # [yes :: must have a head report to post]
 
 ignore:
 - '*/tests/'    # ignore folders related to testing
