--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -169,6 +169,52 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
+  docker:
+    # build and test docker image
+    if: ${{ contains(needs.check_skip_flags.outputs.head-commit-message, 'full_test') }}
+    runs-on: ubuntu-latest
+    needs: [download-test-data, check_skip_flags]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: |
+        user_name="bids"
+        docker build . --file Dockerfile --tag ${user_name}/giga_auto_qc
+        mkdir -p "${HOME}/docker"
+        docker save "${user_name}/giga_auto_qc" > "${HOME}/docker/image.tar"
+
+    - name: Restore cached data ds000017
+      id: cache
+      uses: actions/cache/restore@v3
+      with:
+        path: /home/runner/work/giga_auto_qc/giga_auto_qc/giga_auto_qc/data/test_data
+        key: ds000017
+
+    - name: Test the Docker image
+      run: |
+        docker load -i ${HOME}/docker/image.tar
+        docker run --rm --read-only \
+          -v /home/runner/work/giga_auto_qc/giga_auto_qc/giga_auto_qc/data/test_data:/test_data \
+          -v ./outputs:/outputs \
+          -v ./outputs/working_dir:/work \
+          bids/giga_auto_qc \
+          /test_data/ds000017-fmriprep22.0.1-downsampled-nosurface \
+          /outputs \
+          participant \
+          -w /work \
+          --participant_label 1 \
+          --reindex-bids
+
+    - name: Upload output artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: connectome
+        path: ./outputs/
+    - name: Upload docker image artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: docker-image
+        path: ${HOME}/docker/image.tar
 
   # publish:
   #   runs-on: ubuntu-latest
