Force the CI to run docker as `readonly`, disable templateflow auto update on import (#29)
* full_test see force the CI to run docker as readonly

* full_test remove -ti

* full_test autoupdate

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -193,7 +193,7 @@ jobs:
     - name: Test the Docker image
       run: |
         docker load -i ${HOME}/docker/image.tar
-        docker run --rm \
+        docker run --rm --read-only \
           -v /home/runner/work/giga_auto_qc/giga_auto_qc/giga_auto_qc/data/test_data:/test_data \
           -v ./outputs:/outputs \
           -v ./outputs/working_dir:/work \
